Employee - Create "EmployeeStatusReport" page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2318,6 +2318,18 @@
   "boilerplate.containers.Payroll.Employee.userName": "اسم المستخدم",
   "boilerplate.containers.Payroll.Employee.telephone": "رقم التلفون",
   "boilerplate.containers.Payroll.Employee.RelativesName": "اسم القريب",
+  "boilerplate.containers.Payroll.Employee.youMustChooseAnEmployee": "يجب اختيار موظف",
+  "boilerplate.containers.Payroll.Employee.vacationReport": "تقرير الإجازات",
+  "boilerplate.containers.Payroll.Employee.rewordsReport": "تقرير المكافآت",
+  "boilerplate.containers.Payroll.Employee.penaltyReport": "تقرير الجزاءات",
+  "boilerplate.containers.Payroll.Employee.jobsReport": "تقرير الوظائف",
+  "boilerplate.containers.Payroll.Employee.departmentReport": "تقرير الاقسام",
+  "boilerplate.containers.Payroll.Employee.employeeInfo": "معلومات الموظف",
+  "boilerplate.containers.Payroll.Employee.reportingTo": "التبليغ إلى",
+  "boilerplate.containers.Payroll.Employee.phone": "الهاتف",
+  "boilerplate.containers.Payroll.Employee.vacation": "الإجازة",
+  "boilerplate.containers.Payroll.Employee.absent": "الغياب",
+  "boilerplate.containers.Payroll.Employee.statusInfo": "معلومات الحالة",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.preview": "معاينة",
