--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2243,6 +2243,18 @@
   "boilerplate.containers.Payroll.Employee.pleaseMakeSureInsuredFieldsHasInsuranceDate": "Please make sure insured fields have insurance date",
   "boilerplate.containers.Payroll.Employee.uploadFile": "Upload",
   "boilerplate.containers.Payroll.Employee.userName": "Username",
+  "boilerplate.containers.Payroll.Employee.youMustChooseAnEmployee": "You must choose an employee",
+  "boilerplate.containers.Payroll.Employee.vacationReport": "Vacation Report",
+  "boilerplate.containers.Payroll.Employee.rewordsReport": "Rewards Report",
+  "boilerplate.containers.Payroll.Employee.penaltyReport": "Penalty Report",
+  "boilerplate.containers.Payroll.Employee.jobsReport": "Jobs Report",
+  "boilerplate.containers.Payroll.Employee.departmentReport": "Department Report",
+  "boilerplate.containers.Payroll.Employee.employeeInfo": "Employee Info",
+  "boilerplate.containers.Payroll.Employee.reportingTo": "Reporting To",
+  "boilerplate.containers.Payroll.Employee.phone": "Phone",
+  "boilerplate.containers.Payroll.Employee.vacation": "Vacation",
+  "boilerplate.containers.Payroll.Employee.absent": "Absent",
+  "boilerplate.containers.Payroll.Employee.statusInfo": "Status Info",
   "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "Employee Name Should Be More Than One Word",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "Username Already Exist",
   "boilerplate.containers.Payroll.Employee.email": "Email",
