--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2555,6 +2555,7 @@
   "boilerplate.containers.Payroll.insurance.employeeAgeAtEndOfMonth": "Employee Age At End Of Month",
   "boilerplate.containers.Payroll.insurance.age": "Age",
   "boilerplate.containers.Payroll.insurance.year": "Year",
+  "boilerplate.containers.Payroll.insurance.calculationTemplate": "Calculation Template",
   "boilerplate.containers.Payroll.insurance.employeeNumber": "Employee Number",
   "boilerplate.containers.Payroll.insurance.month": "Month",
   "boilerplate.containers.Payroll.insurance.percent1": "1% Percent",
