FIX: Social Insurance - Fix translation error (year & month) in arabic

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2647,9 +2647,9 @@
   "boilerplate.containers.Payroll.insurance.employeeAgeAtEndOfMonth": "عمر الموظف بنهاية الشهر",
   "boilerplate.containers.Payroll.insurance.all": "الكل",
   "boilerplate.containers.Payroll.insurance.age": "العمر",
-  "boilerplate.containers.Payroll.insurance.month": "السنة",
+  "boilerplate.containers.Payroll.insurance.month": "الشهر",
   "boilerplate.containers.Payroll.insurance.employeeNumber": "عدد الموظفين",
-  "boilerplate.containers.Payroll.insurance.year": "الشهر",
+  "boilerplate.containers.Payroll.insurance.year": "السنة",
   "boilerplate.containers.Payroll.insurance.onlyInsured": "المؤمن عليهم فقط",
   "boilerplate.containers.Payroll.insurance.insuranceNumberIsRequire": "الرقم التاميني مطلوب",
   "boilerplate.containers.Payroll.insurance.reason": "السبب",
