--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2335,6 +2335,10 @@
   "boilerplate.containers.Payroll.Employee.absent": "الغياب",
   "boilerplate.containers.Payroll.Employee.statusInfo": "معلومات الحالة",
 
+  "boilerplate.containers.Payroll.Employee.fakeAddress": "عنوان وهمي",
+  "boilerplate.containers.Payroll.Employee.jobName": "اسم الوظيفة",
+  "boilerplate.containers.Payroll.Employee.insDate": "التاريخ",
+
   "boilerplate.containers.Payroll.MainData.codes.id": "كود",
   "boilerplate.containers.Payroll.MainData.codes.preview": "معاينة",
   "boilerplate.containers.Payroll.MainData.codes.hrForm": "نموذج الموارد البشرية",
