--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2612,6 +2612,7 @@
   "boilerplate.containers.Payroll.insurance.ownerName": "اسم المالك",
   "boilerplate.containers.Payroll.insurance.actions": "الاجراءت",
   "boilerplate.containers.Payroll.insurance.enName": "الاسم بالانجليزية",
+  "boilerplate.containers.Payroll.insurance.socialInsuranceNumberMustBeLessThan20Number": "يجب أن يكون رقم التأمين الاجتماعي أقل من 20 رقم",
   "boilerplate.containers.Payroll.insurance.arName": "الاسم بالعربية",
   "boilerplate.containers.Payroll.insurance.SInsuranceOrgnizationCreateTitle": "إنشاء منظمة التأمين",
   "boilerplate.containers.Payroll.insurance.SInsuranceOrgnizationEditTitle": "تعديل منظمة التأمين",
