--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2559,6 +2559,7 @@
   "boilerplate.containers.Payroll.insurance.lessThan60": "Less than 60",
   "boilerplate.containers.Payroll.insurance.employeeAgeAtEndOfMonth": "Employee Age At End Of Month",
   "boilerplate.containers.Payroll.insurance.age": "Age",
+  "boilerplate.containers.Payroll.insurance.socialInsuranceNumberMustBeLessThan20Number": "Social Insurance Number Must Be Less Than 20 Number",
   "boilerplate.containers.Payroll.insurance.year": "Year",
   "boilerplate.containers.Payroll.insurance.calculationTemplate": "Calculation Template",
   "boilerplate.containers.Payroll.insurance.employeeNumber": "Employee Number",
