FIX: Recruitment  - JobOfferCreate - Fix arabic translation & remove required attribute from commission & salaryStructure fields

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1865,8 +1865,8 @@
     "boilerplate.containers.Payroll.Payroll.Taxelement": "عناصر الضريبة",
     "boilerplate.containers.Payroll.Payroll.Inselement": "عناصر التأمينات",
     
-    "boilerplate.containers.Payroll.Payroll.SalaryStructureUpdateTitle": "تعديل نماذج المرتبات",
-    "boilerplate.containers.Payroll.Payroll.SalaryStructureCreateTitle": "اضافة نماذج المرتبات",
+    "boilerplate.containers.Payroll.Payroll.SalaryStructureUpdateTitle": "تعديل نموذج تقسيم المرتب",
+    "boilerplate.containers.Payroll.Payroll.SalaryStructureCreateTitle": "اضافة نموذج تقسيم المرتب",
     "boilerplate.containers.Payroll.Payroll.ShortName": "الاسم المختصر",
     "boilerplate.containers.Payroll.Payroll.ElementsCreateTitle": "اضافة عناصر",
     "boilerplate.containers.Payroll.Payroll.ElementsUpdateTitle": "تعديل عناصر",
@@ -2175,7 +2175,7 @@
   "boilerplate.containers.Payroll.Employee.personal.isinsured": "مؤمن عليه",
 
   "boilerplate.containers.Payroll.Employee.salary.chooseEmp": "اختيار موظف",
-  "boilerplate.containers.Payroll.Employee.salary.salaryStructure": "نموذج الراتب",
+  "boilerplate.containers.Payroll.Employee.salary.salaryStructure": "نموذج تقسيم المرتب",
   "boilerplate.containers.Payroll.Employee.salary.isBnkTransfer": "تحويل المرتب للبنك",
   "boilerplate.containers.Payroll.Employee.salary.taxable": "خاضع للضريبة",
   "boilerplate.containers.Payroll.Employee.salary.consultant": "استشاري",
@@ -2809,9 +2809,9 @@
   "boilerplate.containers.Payroll.recruitment.managerAppStatus": "حالة الطلب(المدير)",
   "boilerplate.containers.Payroll.recruitment.hrInterviewStatus": "حالة المقابله(شئون العاملين)",
   "boilerplate.containers.Payroll.recruitment.setHiringDate": "تحديد تاريخ التوظيف",
-  "boilerplate.containers.Payroll.recruitment.salaryStructure": "هيكلية الرواتب",
+  "boilerplate.containers.Payroll.recruitment.salaryStructure": "نموذج تقسيم المرتب",
   "boilerplate.containers.Payroll.recruitment.grossSalary": "الراتب الكلى",
-  "boilerplate.containers.Payroll.recruitment.commession": "اللجنة",
+  "boilerplate.containers.Payroll.recruitment.commession": "العمولة",
   "boilerplate.containers.Payroll.recruitment.contractType": "نوع العقد",
   "boilerplate.containers.Payroll.recruitment.jobCode": "كود الوظيفة",
   "boilerplate.containers.Payroll.recruitment.job": "الوظيفة",
@@ -2829,7 +2829,7 @@
   "boilerplate.containers.Payroll.recruitment.description": "الوصف",
   "boilerplate.containers.Payroll.recruitment.section": "القطاع",
   "boilerplate.containers.Payroll.recruitment.expireDate": "تاريخ الانتهاء",
-  "boilerplate.containers.Payroll.recruitment.applicantName": "اسم التطبيق",
+  "boilerplate.containers.Payroll.recruitment.applicantName": "اسم المتقدم",
   "boilerplate.containers.Payroll.recruitment.applicationDate": "تاريخ الطلب",
   "boilerplate.containers.Payroll.recruitment.hrStatus": "حالة الموارد البشرية",
   "boilerplate.containers.Payroll.recruitment.technicalStatus": "الحالة الفنية",
