--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -816,6 +816,8 @@
   "boilerplate.components.tables.codes.code": "الكود",
   "boilerplate.components.tables.codes.from": "من",
   "boilerplate.components.tables.codes.to": "الي",
+  "boilerplate.components.tables.codes.isHR": "مسؤول موارد بشرية",
+  "boilerplate.components.tables.codes.isManager": "مدير",
   "boilerplate.components.tables.codes.choiceGrade": "درجة الاختيار",
   "boilerplate.components.tables.codes.requirements": "المتطلبات",
   "boilerplate.components.tables.codes.name": "الاسم بالعربية",
