--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -830,6 +830,8 @@
   "boilerplate.components.tables.codes.elJob": "Element Job",
   "boilerplate.components.tables.codes.elPercent": "Element Percent",
   "boilerplate.components.tables.codes.action": "Actions",
+  "boilerplate.components.tables.codes.isHR": "Is HR",
+  "boilerplate.components.tables.codes.isManager": "Is Manager",
   "boilerplate.components.tables.codes.address": "Address",
   "boilerplate.components.tables.codes.note": "Notes",
   "boilerplate.components.tables.codes.accno": "Account Number",
