--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -899,6 +899,7 @@
   "boilerplate.components.tables.codes.receiverJobInResignation": "Receiver Job In Resignation",
 
 
+  "boilerplate.containers.Payroll.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.save": "Save",
   "boilerplate.containers.Payroll.close": "Close",
   "boilerplate.containers.Payroll.cancel": "Cancel",
