--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2070,7 +2070,7 @@
     "boilerplate.containers.Payroll.Payroll.isPartCalc": "احتساب جزئي",
     "boilerplate.containers.Payroll.Payroll.Calculate": "اجراء عملية الحساب",
 
-    "boilerplate.containers.Payroll.Payroll.grossSal": "grossSal",
+    "boilerplate.containers.Payroll.Payroll.grossSal": "صافي المستحق",
     "boilerplate.containers.Payroll.Payroll.empInsSalary": "الراتب التأمينى",
     "boilerplate.containers.Payroll.Payroll.insuCompValFixed":"تأمينات الشركه",
     "boilerplate.containers.Payroll.Payroll.insuEmpValFixed": "تأمينات الموظف",
