fix date picker in Edit Table, edit api date in Organization and OrganizationCreate pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2429,7 +2429,7 @@
   "boilerplate.containers.Payroll.MainData.codes.uploadLogo": "تحميل الشعار",
   "boilerplate.containers.Payroll.MainData.codes.logoIsRequired": "الشعار مطلوب",
 
-  "boilerplate.containers.Payroll.MainData.codes.translate": "اخلاء طرف",
+  "boilerplate.containers.Payroll.MainData.codes.IsDisclaimer": "اخلاء طرف",
 
   "boilerplate.containers.Payroll.Request.Transaction.PermissionsList": "قائمة الأذونات",
   "boilerplate.containers.Payroll.Request.Transaction.employeeId": "كود الموظف",
