--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1010,6 +1010,8 @@
   "boilerplate.containers.Payroll.employees": "View Employees",
   "boilerplate.containers.Payroll.confirmationMess": "Confirmation Message",
 
+  "boilerplate.containers.Payroll.DateNotValid": "Date Not Valid",
+
   "boilerplate.containers.Payroll.VacationName": "Vacation",
   "boilerplate.containers.Payroll.Actions": "Actions",
   "boilerplate.containers.Payroll.EditHrNotes": "Edit Hr Notes",
