--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1174,6 +1174,9 @@
   "boilerplate.containers.Payroll.HumanResources.id": "Id",
   "boilerplate.containers.Payroll.HumanResources.resignationDate": "Resignation Date",
   "boilerplate.containers.Payroll.HumanResources.lastWorkingDay": "Last Working Day",
+  "boilerplate.containers.Payroll.HumanResources.department": "Department",
+  "boilerplate.containers.Payroll.HumanResources.receiver": "Receiver",
+  "boilerplate.containers.Payroll.HumanResources.comment": "Comment",
   "boilerplate.containers.Payroll.HumanResources.executionId": "Id",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "Employee",
   "boilerplate.containers.Payroll.HumanResources.status": "Status",
