IMPROVE: Human Resources - ResignReqTrx - Integrate with api & improve layout

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1176,6 +1176,7 @@
   "boilerplate.containers.Payroll.Setting.resetallpassword": "استرجاع الكل",
   "boilerplate.containers.Payroll.Setting.resetpassword": "استرجاع كلمة المرور",
   "boilerplate.containers.Payroll.Setting.department": "القسم",
+  "boilerplate.containers.Payroll.Setting.resign": "الاستقالة",
   "boilerplate.containers.Payroll.Setting.pleaseSelectEmployee": "الرجاء تحديد الموظف",
   "boilerplate.containers.Payroll.Setting.employee": "الموظف",
   "boilerplate.containers.Payroll.Setting.printForm": "نموذج الطباعة",
@@ -1285,7 +1286,11 @@
   "boilerplate.containers.Payroll.HumanResources.department": "القسم",
   "boilerplate.containers.Payroll.HumanResources.comment": "تعليق",
   "boilerplate.containers.Payroll.HumanResources.receiver": "المستلم",
-
+  "boilerplate.containers.Payroll.HumanResources.custodies": "العهد",
+  "boilerplate.containers.Payroll.HumanResources.homeNumber": "رقم المنزل",
+  "boilerplate.containers.Payroll.HumanResources.address": "العنوان",
+  "boilerplate.containers.Payroll.HumanResources.mobileNumber": "رقم الهاتف",
+  "boilerplate.containers.Payroll.HumanResources.personalEmail": "البريد الإلكتروني الشخصي",
   
   "boilerplate.containers.Payroll.Attendance.missionId": "كود المأمورية",
   "boilerplate.containers.Payroll.Attendance.executionId": "الكود",
