--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1126,6 +1126,7 @@
   "boilerplate.containers.Payroll.Setting.penalty": "Penalty",
   "boilerplate.containers.Payroll.Setting.overTime": "Over Time",
   "boilerplate.containers.Payroll.Setting.reward": "Reward",
+  "boilerplate.containers.Payroll.Setting.resign": "Resign",
   "boilerplate.containers.Payroll.Setting.organization": "Organization",
   "boilerplate.containers.Payroll.Setting.subject": "Subject",
   "boilerplate.containers.Payroll.Setting.addDecorator": "Add Decorator",
@@ -1176,6 +1177,11 @@
   "boilerplate.containers.Payroll.HumanResources.lastWorkingDay": "Last Working Day",
   "boilerplate.containers.Payroll.HumanResources.department": "Department",
   "boilerplate.containers.Payroll.HumanResources.receiver": "Receiver",
+  "boilerplate.containers.Payroll.HumanResources.custodies": "Custodies",
+  "boilerplate.containers.Payroll.HumanResources.homeNumber": "Home Number",
+  "boilerplate.containers.Payroll.HumanResources.address": "Address",
+  "boilerplate.containers.Payroll.HumanResources.mobileNumber": "Mobile Number",
+  "boilerplate.containers.Payroll.HumanResources.personalEmail": "Personal Email",
   "boilerplate.containers.Payroll.HumanResources.comment": "Comment",
   "boilerplate.containers.Payroll.HumanResources.executionId": "Id",
   "boilerplate.containers.Payroll.HumanResources.employeeId": "Employee",
